Fixing broken Yarn lifecycle hooks

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-bin
+bin/*
+!bin/ldd
 build
-ldd
 
 # misc
 *.log
 .DS_Store
 node_modules
-.cache
-dist
-
-# dependencies
-/node_modules
 
 # debug
 npm-debug.log*
