--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,21 +2,27 @@ version: '3'
 
 services:
   db:
-    image: "mariadb:${LDD_DB_IMAGE_TAG:-latest}"
+    image: 'mysql:${LDD_DB_IMAGE_TAG:-lts}'
     ports:
-      - "${LDD_DB_PORT:-3306}:3306"
+      - '${LDD_DB_PORT:-3306}:3306'
+    command: >
+      --sql-mode=${LDD_SQL_MODE:-"ANSI,ONLY_FULL_GROUP_BY,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION,NO_ZERO_DATE,NO_ZERO_IN_DATE,STRICT_ALL_TABLES,ALLOW_INVALID_DATES"}
+      --sql-require-primary-key=${LDD_SQL_REQUIRE_PRIMARY_KEY:-ON}
+      --default-storage-engine=${LDD_DEFAULT_STORAGE_ENGINE:-InnoDB}
+      --explicit_defaults_for_timestamp=${LDD_EXPLICIT_DEFAULTS_FOR_TIMESTAMP:-ON}
     networks:
       - private
     volumes:
       - db_data:/var/lib/mysql
     environment:
-      MARIADB_ROOT_PASSWORD: "${LDD_DB_ROOT_PASSWORD:-not-secure-pwd}"
-      MARIADB_DATABASE: defaultdb
+      MYSQL_ROOT_PASSWORD: '${LDD_DB_ROOT_PASSWORD:-not-secure-pwd}'
+      MYSQL_DATABASE: defaultdb
+
   phpmyadmin:
-    image: "phpmyadmin:${LDD_PMA_IMAGE_TAG:-latest}"
+    image: 'phpmyadmin:${LDD_PMA_IMAGE_TAG:-latest}'
     restart: always
     ports:
-      - "${LDD_PMA_PORT:-8010}:80"
+      - '${LDD_PMA_PORT:-8010}:80'
     networks:
       - private
     depends_on:
@@ -25,8 +31,8 @@ services:
       PMA_HOST: db
       PMA_PORT: 3306
       PMA_USER: root
-      PMA_PASSWORD: "${LDD_DB_ROOT_PASSWORD:-not-secure-pwd}"
-      MYSQL_ROOT_PASSWORD: "${LDD_DB_ROOT_PASSWORD:-not-secure-pwd}"
+      PMA_PASSWORD: '${LDD_DB_ROOT_PASSWORD:-not-secure-pwd}'
+      MYSQL_ROOT_PASSWORD: '${LDD_DB_ROOT_PASSWORD:-not-secure-pwd}'
 
 networks:
   private:
